:lipstick: style: overlapping fix

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,14 @@
-body {
+  body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+  }
+
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
   }
   
   .container {
